--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,3 +2,16 @@ body {
 	background: url('../img/background.jpg') no-repeat;
 	background-size: cover;
 }
+
+.jumbotron {
+	background-color: #3a3d5c;
+	margin-top: 15%;
+}
+
+.jumbotron > h1 {
+	color: white;
+}
+
+p, h3, h4, label {
+	color: white;
+}
