--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,7 @@
 body {
 	background: url('../img/background.jpg') no-repeat;
 	background-size: cover;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .jumbotron {
@@ -10,8 +11,17 @@ body {
 
 .jumbotron > h1 {
 	color: white;
+	font-family: 'Oleo Script', cursive;
+}
+
+.jumbotron > h2 {
+	color: white;
 }
 
 p, h3, h4, label {
+	color: white;
+}
+
+small {
 	color: white;
 }
